# gw-wl-emulator

./: .gitignore  Makefile  README.MD  lnmu_1k.txt  lnmu_5k.txt  wrapper_test.txt
cpp/: CMakeLists.txt  basics.cpp  cosmology.cpp  lensing.cpp  lensing.h  lnmu_wrapper.cpp  lnmu_wrapper.h  main_lensing.cpp  main_sample_lnmu.cpp  python_bindings.cpp  test_stats.cpp
docker/: Dockerfile
docs/: dev_workflow.md  docker.md  troubleshooting.md
python/: plot_lnmu.py  testing_api.py
scripts/: build.sh  dev_shell.ps1  dev_shell.sh  run_make.ps1  watch_build.sh
